src/index.css
/* Font Imports */
@import url('https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Syncopate:wght@400;700&display=swap');

*, body, html{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Variables */
:root{
    --primary-color: #5315D1;
    --secondary-color: #001E6B;
    --bg-color: #F2F2F2;
    --accent-color: #FFC044;
    --text-color: #000000;
}

/* Headers/Text */
h1{
    font-size: 6rem;
    font-family: "Syncopate", Helvetica, sans-serif;
    font-weight: 700;
    font-style: normal;
    text-align: center;
}

p{
    font-size: 1.5rem;
    font-family: "Funnel Display", Helvetica, sans-serif;
    font-weight: normal;
}

/* Grid */
.app{
    width: 100vw;
    height: 100vh;
    display: grid;
    background-color: var(--bg-color);
}

/* Sections */
.home{
    width: 100%;
    height: 100dvh;
    background-image: linear-gradient(var(--secondary-color), var(--primary-color));
    color: #FFFFFF;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 16px;
}

.home-logo{
    width: 30vw;
    aspect-ratio: 1 / 1;
} 

/* Components */
.button{
    padding: 16px 32px;
    border-radius: 25px;
    background-color: var(--accent-color);
}

.button:hover{
    background-color: oklch(from var(--accent-color) calc(l * 0.95) c h);
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

